apps/base/matrix/element-call/ingress_livekit.yaml
---
apiVersion: traefik.containo.us/v1alpha2
kind: Middleware
metadata:
  name: wss-header
  namespace: element-call
spec:
  headers:
    customRequestHeaders:
      Connection: keep-alive, Upgrade
      Upgrade: WebSocket
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    traefik.ingress.kubernetes.io/router.middlewares: element-call-wss-header@kubernetescrd
  name: element-call-livekit
  namespace: element-call
spec:
  rules:
  - host: call-livekit.midnightthoughts.space
    http:
      paths:
      - backend:
          service:
            name: element-call-livekit-server
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - call-livekit.midnightthoughts.space
    secretName: call-livekit.midnightthoughts.space-tls
