apps/base/matrix/element-call/s3_ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: element-call-tenant-console
  namespace: element-call
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: HostSNI(`console.call-s3.midnightthoughts.space`)
      services:
        - kind: Service
          name: element-call-hl
          namespace: element-call
          port: 9000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: element-call-tenant-s3
  namespace: element-call
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: HostSNI(`call-s3.midnightthoughts.space`)
      services:
        - kind: Service
          name: minio
          namespace: element-call
          port: 443
